Add ECL for scripting!  Also miscellaneous other things: added a style guide, removed sdl mixer boilerplate (I watched some of guy's talks, and came to the conclusion that sdl_mixer is not suited to anything real.  I'm going to add support for fmod nowish because it's easy, longterm replace it with gorilla audio and maintain that in-house), adhered to the style guide (every starts with a module declaration and then 'import stdlib').  Also there might be a boilerplate for assets now.  Then again, there might not be

--- a/licenses/THANKS.txt
+++ b/licenses/THANKS.txt
@@ -1,4 +1,5 @@
 This program may contain the following external libraries:
 
-* SDL2 and SDL2_mixer, licensed under the zlib license (available at LICENSE.zlib.txt).  Source code for these is available at https://www.libsdl.org/release/SDL2-2.0.9.tar.gz and https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.4.tar.gz, respectively.
-* libFLAC, libogg/libvorbis, libopus, and libopusfile, licensed under the BSD 3-clause license (available at LICENSE.BSD3.txt).  Source available at https://git.xiph.org/?p=flac.git, https://git.xiph.org/?p=ogg.git, https://git.xiph.org/?p=vorbis.git, https://git.xiph.org/?p=opus.git, https://git.xiph.org/?p=opusfile.git, with modifications from https://hg.libsdl.org/SDL_mixer/file/default/external.
+* SDL2, licensed under the zlib license (available at LICENSE.zlib.txt).  Source code is available at https://www.libsdl.org/release/SDL2-2.0.9.tar.gz.
+* libFLAC, libogg/libvorbis, libopus, and libopusfile, licensed under the BSD 3-clause license (available at LICENSE.BSD3.txt).  Source available at https://git.xiph.org/?p=flac.git, https://git.xiph.org/?p=ogg.git, https://git.xiph.org/?p=vorbis.git, https://git.xiph.org/?p=opus.git, and https://git.xiph.org/?p=opusfile.git.
+* DerelictSDL2, DerelictGL, and Derelict utils, licensed under the boost license (available at LICENSE.boost.txt).  Source code for these is available at https://github.com/DerelictOrg/DerelictSDL2, https://github.com/DerelictOrg/DerelictGL3, and https://github.com/DerelictOrg/DerelictUtil.
