--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+TO DO:::
+- Font rendering
+- Raygui
+- Robustify framebuffer interface based on above
+- C dlls
+ - D dlls?
+- Store data in engine, record changes to data, to allow for inversion etc.
+
 * Add support for scripting with c (figure out a way to make this static).
   * I think the way this works is that a c 'script' actually has all *static* types and symbols.  Like this:
     * When you say expose_fun(whatever) or expose_var(whatever), it spits that out into a header file
